api to query attachment;
